# samu

./: .env.example  .gitignore  AGENT.md  CHANGELOG.md  README.md  agent.md  agent_errors.md  docker-compose.yml
PS1/: dev_down.ps1  dev_up.ps1  guards.ps1  migrate.ps1  seed.ps1  smoke.ps1  test_backend.ps1  test_frontend.ps1  validate.ps1
agents/: backend.md  devops.md  docs.md  frontend.md
api/: INDEX.md
backend/: .env.example  Dockerfile  README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/: context.py  deps.py  errors.py  pagination.py
backend/app/api/routes/: __init__.py  health.py
backend/app/api/v1/: router.py
backend/app/api/v1/routes/: collaborators.py  finance.py  health.py  notifications.py  orgs.py  planning.py  projects.py
backend/app/audit/: middleware.py  model.py  sink.py
backend/app/core/: config.py  errors.py  ids.py
backend/app/core/db/: base.py  session.py  uow.py
backend/app/core/feature_flags/: __init__.py  loader.py  models.py  provider.py  service.py  utils.py
backend/app/core/logging/: config.py
backend/app/core/messaging/: outbox.py  publisher.py
backend/app/core/observability/: metrics.py  tracing.py
backend/app/core/security/: auth.py  rbac.py
backend/app/domain/: models.py
backend/app/jobs/: client.py  worker.py
backend/scripts/: seed_data.py
backend/tests/: conftest.py  test_app.py  test_feature_flags.py  test_healthcheck.py  test_orgs.py  test_settings.py
config/: feature_flags.example.json
ux/: INDEX.md
(+224 files in other folders)
